ARQ-1848 - Tomcat managed containers should start and stop Tomcat using the standard run scripts.